--- a/CSS/Login.css
+++ b/CSS/Login.css
@@ -1,36 +1,92 @@
-body {
+*{
     margin: 0;  
     padding: 0;
-    background: #1D2125;
-    height: 100%;
+    box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
-h2, label,p{
-    color: white;
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: url('/Assets/blue-mountain-jfry6wta743ursmd1.jpg') no-repeat;
+    background-size: cover;
+    background-position: center;
 }
-.input {
-    border : 5px solid black;
-    background-color: white;
-    color: black;
-    padding: 14px 28px;
-    font-size: 20px;
-    cursor: pointer;
-    border-color: #3a5279;
+.wrapper{
+    width: 420px;
+    background: transparent;
+    color: #fff;
+    border: 2px solid white;
     border-radius: 10px;
-    background-color: white;
+    padding: 30px 40px;
 }
-.btn {
-    border : 2px solid black;
-    background-color: white;
-    color: black;
-    padding: 14px 28px;
+.wrapper h1{
+    font-size: 36px;
+    text-align: center;
+}
+.wrapper .input-box{
+    position: relative;
+   width: 100%;
+   height: 50px;
+   margin: 30px 0; 
+}
+.input-box input {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    outline: none;
+    border: 2px solid white;
+    border-radius: 40px;
     font-size: 16px;
-    cursor: pointer;
-    border-radius: 10px;
-    background-color: #3a5279;
-    border-color: #3a5279;
+    color: #fff;
+    padding: 20px 45px 20px 20px;
 }
-.btn:hover{
-    background-color: wheat;
-    border-radius: 10px;
+.input-box input::placeholder{
+    color: #fff;
+}
+
+.input-box i{
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+}
+
+.wrapper .btn{
+    width: 100%;
+    height: 45px;
+    background: #fff;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0,0,0, .1);
+    cursor: pointer;
+    font-size: 16px;
+    color: #333;
+    font-weight: 600;
+    margin: 5px 0; 
+    transition: 500ms;
+}
+.wrapper .btn:hover{
+    transition: 500ms;
+    background-color: grey;
+    color: rgb(255, 255, 255);
+}
+
+.wrapper .login-register{
+    font-size: 14.5px;
+    text-align: center;
+    margin: 20px 0 15px;
+}
+
+.login-register p a{
+color: #fff;
+text-decoration: none;
+font-weight: 600;
+}
+
+.login-register p a:hover{
+text-decoration: underline;
 }
